# Autolink_Web_Assigment

./: README.md  db.sqlite3  manage.py
Autolink/: asgi.py  settings.py  urls.py  wsgi.py
Main/: admin.py  forms.py  models.py  urls.py  views.py
Main/migrations/: 0001_initial.py
Main/static/: aboutus.css  aboutus.js  index.css  main.js
Main/templates/: aboutus.html  faq.html  index.html
Profile/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Profile/migrations/: 0001_initial.py  0002_alter_savedvehicle_user.py  0003_alter_savedvehicle_user.py  0004_uploadedvehicle.py  0005_profilepicture.py
Profile/static/: passwordchangeform.css  profile.css  profile_ajax.js  superadmin.css
Profile/templates/: passwordchangeform.html  profile.html  savedvehicles.html  superadmin_profile.html
Profile/templatetags/: custom_filters.py
Reviews/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
Reviews/migrations/: 0001_initial.py  0002_report_rename_content_review_review_text_and_more.py
Users/: forms.py  models.py  urls.py  views.py
Users/migrations/: 0001_initial.py  0002_vehicle_created_at_alter_vehicle_condition_and_more.py  0003_alter_savedvehicle_user.py  0006_vehicle_contact.py  (+3 more)
Vehicles/: admin.py  models.py  serializers.py  urls.py  views.py
api/: serializers.py  urls.py  views.py
mobile_app/: README.md  autolink_app.py  main.py  pyproject.toml  shared.py
mobile_app/screens/: __init__.py  detail.py  home.py  login.py  nearby.py  profile.py  reviews.py  saved.py  upload.py
templates/: footer.html  nav.html
(+52 files in other folders)
